@@ -42,7 +42,7 @@ public class GeoNodeTokenServices extends GeoServerOAuthRemoteTokenServices {
 
     @Override
     protected String getAuthorizationHeader(String accessToken) {
-        String creds = String.format("%s:%s", clientId, clientSecret);
+        String creds = "%s:%s".formatted(clientId, clientSecret);
         try {
             return "Basic " + new String(Base64.getEncoder().encode(creds.getBytes("UTF-8")));
         } catch (UnsupportedEncodingException e) {
