@@ -43,7 +43,7 @@ public class DropStoredQuery {
         } else {
             WFSException exception = new WFSException(
                     request,
-                    String.format("Stored query %s does not exist.", request.getId()),
+                    "Stored query %s does not exist.".formatted(request.getId()),
                     ServiceException.INVALID_PARAMETER_VALUE);
             // CITE tests vagary, the XML uses "id" and KVP uses "STOREDQUERY_ID", the CITE tests
             // mandate "id"
